--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -4,11 +4,7 @@
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
-  z-index: 0;
-  position: absolute;
-  left: 0;
   width: 100%;
-  top: 0;
 }
 
 .hero:after,
@@ -20,25 +16,29 @@
 .hero:before {
   width: 100%;
   background: linear-gradient(180deg, #231f20, rgba(35, 31, 32, 0));
-  height: 150px;
+  height: 20vh;
 }
 
-.hero:after {
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: rgba(35, 31, 32, 0.3);
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  top: 5rem;
+  width: 80%;
+  padding: 2rem;
+  margin: 0 auto;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
 
-.navbar {
-  background-color: transparent;
-  width: 100%;
-  top: 0;
-  z-index: 1010;
-  position: fixed;
-  transition: width 0.2s ease, padding 0.2s linear;
-  padding: 1rem 2rem;
+.nav-bar .muButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
 .footer {
@@ -70,15 +70,10 @@
   margin-bottom: 0;
 }
 
-@media (min-width: 30em) {
-  .hero {
-    height: 30vh;
-  }
-}
-
 @media (min-width: 60em) {
   .hero {
     height: 100vh;
+    height: 20vh;
     max-height: 550px;
   }
 
