--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,3 +29,20 @@ h3 {
   font-size: 1.125rem;
   margin-bottom: 0.8rem;
 }
+
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+li {
+  list-style-type: none;
+}
